# summit_xl_mico_robot

./: README.md
summit_xl_mico_robot_bringup/: CMakeLists.txt  package.xml
summit_xl_mico_robot_bringup/config/robotnik_trajectory_control/: summit_xl_mico_robot_interfaces.yaml
summit_xl_mico_robot_bringup/launch/: complete.launch  fake_odom_tf.launch
summit_xl_mico_robot_bringup/launch/robotnik_traj_control/: robotnik_trajectory_control.launch
