<?xml version="1.0"?>
<package>
  <name>summit_xl_mico_robot_bringup</name>
  <version>0.0.0</version>
  <description>The summit_xl_mico_robot_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotnik_trajectory_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
